[project]
name = "penumbra"
version = "0.2.11"
description = "Playwright ENhanced Umbra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prometheus-client>=0.20.0",
    "playwright>=1.46.0",
    "aio-pika>=9.4.3",
    "prometheus-async>=22.2.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
penumbra = "penumbra.worker:run"
get_project_version = "scripts.get_project_version:run"
playwright = "playwright.__main__:main"

[project.optional-dependencies]
uvloop = [
    "uvloop>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.2",
]
